Fixed some styling issues found from testing layout on mobile.

--- a/src/styles/navbar/navbar.scss
+++ b/src/styles/navbar/navbar.scss
@@ -172,7 +172,7 @@
 }
 
 .checkbox:checked ~ .navigation {
-  left: 8rem;
+  left: 6rem;
 }
 
 .checkbox:checked ~ .sidebar .line-1 {
